# lew_rat

./: .gitignore  LICENSE  README.md  rebuild_client.bat  rebuild_server.bat
client/: client.sln  client.vcxproj  client.vcxproj.filters
client/src/: CMakeLists.txt  constants.h  main.c  networking.c  system.h  util.c  util.h
client/src/networking/: client_payload_type.h  networking.c  networking.h
client/src/payload/: client_payload.c  client_payload.h  client_payload_callback.c  client_payload_callback.h  heartbeat.c  heartbeat.h  payload.c  payload.h  payload_type.h  system.c  system.h
client/src/payload/payloads/: heartbeat.c  heartbeat.h  system.c  system.h
client/src/util/: parson.c  parson.h  util.c  util.h
server/: server.sln  server.vcxproj  server.vcxproj.filters
server/src/: CMakeLists.txt  client.c  client.h  constants.h  main.c  networking.c  networking.h  parson.c  system.c  system.h
server/src/client/: client.c  client.h  system_info.h
server/src/client_payload/: heartbeat.h  system.h
server/src/networking/: networking.c  networking.h  payload_type.h
server/src/payload/: heartbeat.c  payload_type.h  server_payload.c  server_payload.h  server_payload_callback.c  server_payload_callback.h  system.c  system.h
server/src/payload/payloads/: heartbeat.c  heartbeat.h  system.c  system.h
server/src/server_payload/: payload.c
server/src/util/: parson.h  util.c  util.h
src/client/: networking.h  system.c
src/server/: client.c
